static/profile.css
/* profile games */
.filter-tabs {
    display: flex;
    padding-top: 10px;
}
div.filter-tabs div.sub-ratings {
    flex: auto;
    font-size: 1.2em;
}
div.filter-tabs a {
    justify-content: center;
}
div.versus player:nth-of-type(1) {
  text-align: end;
  white-space: normal;
}
div.versus vs-swords {
  font-size: 2em;
  width: 2.5em;
  text-align: center;
}
.player-sum {
    display: flex;
    flex-flow: column;
}
.player-head {
    font-size: 24px;
    display: flex;
    padding: 2em 1.5em 1em 1.5em;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: space-between;
    background: var(--bg-color2);
}
.player-head h1 {
    flex: 0 0 auto;
    margin: 0;
    padding: 0;
}
.player-social {
    display: flex;
    background: var(--bg-color2);
    justify-content: flex-end;
}
player-title {
  white-space: normal;
}
.trophies {
    height: 40px;
    display: flex;
    flex-flow: row wrap;
    align-items: flex-start;
    justify-content: flex-end;
    margin-top: 0 !important;
}
.trophy {
    display: flex;
    align-items: flex-end;
    height: 40px;
    transition: transform 0.2s;
    margin-right: -8px;
}
.trophy:not(.patron):hover, .shield-trophy:not(.patron):hover {
    transform:translateY(-3px);
}

.trophy img {
    height: 80px;
}
.trophy.award {
    speak: none;
    line-height: 100%;
}
.trophy.icon3d {
    width: 32px;
    height: 32px;
    margin-right: 0;
    font-size: 31px;
    align-items: center;
    justify-content: center;
    color: color-mix(in srgb, var(--font-color) 72%, transparent);
    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
}
.trophy.icon3d + .trophy.icon3d {
    margin-left: 6px;
}
.trophy.icon3d::before {
    display: block;
    line-height: 1;
}
.trophy.top1 {
    filter: drop-shadow(0 0 6px #d59020);
}
.combo-trophy {
    width: 60px;
    height: 60px;
    background-size: contain;
    background-repeat: no-repeat;
    font-family: 'pychess';
    text-align: center;
}
.shield-trophy {
    width: 50px;
    background-image: url(images/trophy/shield-gold.png);
    font-size: 30px;
    line-height: 60px;
    color: #333 !important;
    text-shadow: 0 0 6px #fff;
    margin-top: -20px;
    filter: drop-shadow(0 0 6px #d59020);
}
.btn-rack {
    display: inline-flex;
    align-items: center;
    border: 1px solid var(--border-color);
    border-radius: 3px;
    margin: 1em;
}
.btn-rack a {
    padding: 0 0.6em;
    text-align: center;
    line-height: 2rem;
    border-right: 1px solid var(--border-color);
    color: var(--font-color);
}
[class*=" icon-"]::before {
    line-height: 2rem;
    margin-right: 0.4em;
}
.i-at, .i-tv, .i-dl, .i-ch {
    float: right;
    padding: 0px 4px 0px 4px;
    color: #505050;
    text-decoration: none;
}
.editor-button-container .i-pgn div:before {
    padding-right: 6px;
}
a.i-at:link, a.i-tv:link, a.i-dl:link, a.i-ch:link, a.i-pgn:link {
    display: inline-block;
    text-decoration: none;
}
a.i-at:hover, a.i-tv:hover, a.i-dl:hover, a.i-ch:hover {
    color: RoyalBlue;
}
.i-pgn:hover {
    color: #004f98;
}

div#profile, table#players {
    grid-area: content;
    width: 100%;
    border-collapse: collapse;
    border-spacing: 0px;
    border-radius: 3px;
    /*box-shadow: var(--base-shadow);*/
}
table#games {
    width: 100%;
}
td.player-data {
    padding: 8px;
}

#games th {
    height: 80px;
    background-color: var(--bg-color2);
}

#games td.board {
    padding: 6px 12px 6px 12px;
    align-self: center;
}

#games td.board.with-pockets {
    padding: 46px 12px 44px 12px;
}

#games tr {
    border: 1px solid var(--bg-color1);
    background-color: var(--bg-color2);
}
#games tr a {
    display: flex;
    width:100%;
}
#games tr:nth-child(odd) {
    width:100%;
    background-color: var(--bg-color1);
}
#games tr player {
    font-size: 1.3em;
}
#games tr player a {
    display: contents;
}
#games tbody tr:hover {
    width:100%;
    background-color: var(--game-hover);
    cursor: pointer;
}
#games tr a .icon-trophy {
    display: contents;
    color: var(--link-color-blue);
}
#games tr a .icon-trophy::before {
    padding-right: 4px;
}
#games a:hover {
  color: var(--font-hover);
}
#games .games-info a:hover {
  color: var(--link-hover);
}
@media (max-width: 799px) and (orientation: portrait) {
    ul.perfs {
    margin: 0;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(10ch, 1fr));
    padding-right: 0rem;
    }
    .sub-ratings a span rating {
    display: flex;
    }
    .sub-ratings h3, rating span, .sub-ratings a span rating span {
    display: none;
    }
    a.info0.icon {
    font-size: 0.6rem;
    }
    strong.user-rating-strong {
    font-size: 1rem;
    }
    td.board {
    display:none;
    }
    .sub-ratings a::before {
    margin-right: 0px;
    }
    .trophies {
    display: none;
    }
}
td.board.bug {
    display: flex;
}
td.board.bug selection {
    padding-right: 10px;
}

